--- a/couscous.yml
+++ b/couscous.yml
@@ -1,21 +1,39 @@
 template:
     directory: .
 
-github:
-    user: CouscousPHP
-    repo: Template-Light
+exclude:
+    - .couscous
 
-title: Couscous Light
-subTitle: An amazing template for Couscous.
+github:
+    user: leoruhland
+    repo: cakemanager-couscous
+
+title: CakeManager Couscous
+subTitle: CakeManager Template for Couscous.
 
 # The left menu bar
 menu:
     items:
         home:
             text: Home page
-            # You can use relative urls
-            relativeUrl: /
-        couscous:
-            text: Couscous.io
-            # Or absolute urls
-            absoluteUrl: http://couscous.io
+            relativeUrl:
+        getting-started:
+            text: Getting Started
+            relativeUrl:
+        installation:
+            text: Installation
+            relativeUrl:
+        configuration:
+            text: Configuration
+            relativeUrl:
+        faq:
+            text: FAQ
+            relativeUrl: 
+
+# The nav links
+navLinks:
+    items:
+        cm:
+            text: CakeManager
+            absoluteUrl: http://www.cakemanager.org
+            target: _blank
